ingress-k8s-demo/be-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend # helps deployment to find the pods
  template:
    metadata:
      labels:
        app: backend # this label should match the service's selector
    spec:
      containers:
        - name: backend-container
          image: nginx:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend. # this label should match the deployment's label as it helps the service to find the pods
  ports:
    - protocol: TCP
      port: 80 # service's PORT, which redirects to target port (POD's PORT)
      targetPort: 80 # POD's PORT
  type: ClusterIP # as we want to connect it with db pods internally
