ingress-k8s-demo/fe-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend # helps deployment to find the pods
  template:
    metadata:
      labels:
        app: frontend # this label should match the service's selector
    spec:
      containers:
        - name: frontend-container
          image: httpd
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend # this label should match the deployment's label as it helps the service to find the pods
  ports:
    - protocol: TCP
      port: 80 # service's PORT, which redirects to target port (POD's PORT)
      targetPort: 80 # POD's PORT
  type: ClusterIP # as we want to connect it with db pods internally
